# work_time_parser

./: Makefile  app.py  enums.py  excel_parser.py  pyproject.toml
