[project]
name = "work-time-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Dima Rubets",email = "rubetsdima100@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "openpyxl (>=3.1.5,<4.0.0)",
    "litestar[standart] (>=2.16.0,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
